--- a/src/app/componentes/pregunta-respuesta/pregunta-respuesta.component.html
+++ b/src/app/componentes/pregunta-respuesta/pregunta-respuesta.component.html
@@ -24,7 +24,7 @@
 </div-->
 
 <div class="container">
-  <h1>¡Conversemos sobre el régimen de licencias!</h1>
+  <h1>¡Consulta por tu contenedor!</h1>
 
   <div class="historial-conversacion">
     <div *ngFor="let mensaje of historialConversacion" [ngClass]="{'usuario': mensaje.rol === 'Usuario', 'asistente': mensaje.rol === 'Asistente'}">
